--- a/frontend/src/app/component/login/login.component.html
+++ b/frontend/src/app/component/login/login.component.html
@@ -48,4 +48,47 @@
       </div>
     </div>
   </div>
+  <!-- Success screen -->
+  <div *ngIf="state.isUsingMfa" class="container">
+    <!-- <div class="container"> -->
+    <div class="row justify-content-center my-5">
+      <div class="col-md-6" style="margin-top: 50px;">
+        <div class="card">
+          <div class="card-body">
+            <div class="text-center">
+              <h2>SecureCapita</h2>
+              <h5 class="card-title mt-4 mb-4">Verification Code Sent To ...{{state.phone}}</h5>
+              
+              <p class="mt-2" style="font-size: 20px;">Please access your SMS and enter the code.</p>
+            </div>
+            <div *ngIf="state.dataState === DataState.ERROR" class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+              {{state.error}}
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form #verifyCodeForm="ngForm" (ngSubmit)="verifyCode(verifyCodeForm)">
+              <div class="form-outline mb-4">
+                <label class="form-label">Verification Code</label>
+                <input [disabled]="state.dataState === DataState.LOADING" ngModel type="text" name="code" class="form-control" required>
+              </div>
+              <div class="d-flex justify-content-center mb-4">
+                <button [disabled]="state.dataState === DataState.LOADING || verifyCodeForm.invalid || verifyCodeForm.pristine" type="submit" class="btn btn-primary">
+                  <span *ngIf="state.dataState === DataState.LOADING" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
+                  <span *ngIf="state.dataState === DataState.LOADING">Loading...</span>
+                  <span *ngIf="!(state.dataState === DataState.LOADING)">Verify Code</span>
+                </button>
+              </div>
+            </form>
+            <div class="row mb-4">
+              <div class="col d-flex justify-content-center">
+                <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" (click)="loginPage()" style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Account Login</a>
+              </div>
+              <div class="col">
+                <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/register" style="color: #0D6EFD; text-decoration: underline; cursor: pointer;">Create an account</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
