--- a/frontend/src/app/component/home/home.component.html
+++ b/frontend/src/app/component/home/home.component.html
@@ -1,7 +1,7 @@
 <ng-container>
     <ng-container>
-      <!-- <app-navbar></app-navbar>
-      <app-stats></app-stats> -->
+      <app-navbar></app-navbar>
+      <app-stats></app-stats>
        <section>
           <div class="container">
              <div class="row mt-3">
