Subscribing to Observables

--- a/frontend/src/app/component/profile/profile.component.html
+++ b/frontend/src/app/component/profile/profile.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<ng-container *ngIf="(profileState$ | async) as state">
     <ng-container>
        <app-navbar></app-navbar>
        <section>
